src/snapshots/afrotd__parser__tests__interpretation_html_7.3.2_7.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 7.3.2.VII
        </p>
    </div>
    <div class="message-body">
        <p>
            Mit nur noch einigen Sekunden verbleibender Spielzeit in einer
            Halbzeit ist der Ball freigegeben. Team A stellt sich schnell auf
            und der Ball wird legal zu Quarterback A12 gesnappt, der den Ball
            sofort nach vorne zu Boden wirft. Team A’s Formation war zum
            Zeitpunkt des Snaps nicht legal. Als der Ball dead wurde,
            verbleiben noch zwei Sekunden Spielzeit.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                Strafe – 5 Meter vom Previous Spot. Die Game Clock startet mit
                dem Snap.
            </p>
        </details>
    </div>
</article>
