src/snapshots/afrotd__parser__tests__interpretation_html_7.3.2_8.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 7.3.2.VIII
        </p>
    </div>
    <div class="message-body">
        <p>
            QB A10 sprintet in Richtung einer Seitenlinie und befindet sich
            außerhalb der Tackle Box, als er einen legalen Vorwärtspass wirft,
            der von einem Defense Lineman weggeschlagen wird und dann hinter
            der neutralen Zone landet.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                Legales Spiel. Ohne das Wegschlagen wäre der Ball jenseits der
                neutralen Zone gelandet, so dass A10 im Sinne der Regel
                gehandelt hat.
            </p>
        </details>
    </div>
</article>
