src/snapshots/afrotd__parser__tests__interpretation_html_7.3.4_3.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 7.3.4.III
        </p>
    </div>
    <div class="message-body">
        <p>
            Der Wide Receiver A88 wird von B1 ins Aus geblockt und läuft dann
            20 Meter, bevor er inbounds zurückkehrt. A88 fängt einen legalen
            Pass in Team B’s Endzone.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                Foul für illegales Berühren wegen A88’s Unterlassung, sofort
                wieder ins Feld zurückzukehren. Strafe – Downverlust am
                Previous Spot.
            </p>
        </details>
    </div>
</article>
