src/snapshots/afrotd__parser__tests__interpretation_html_7.3.4_4.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 7.3.4.IV
        </p>
    </div>
    <div class="message-body">
        <p>
            Der berechtigte Receiver A44 läuft eine Passroute in der Nähe einer
            Seitenlinie. Als ein legaler Vorwärtspass in seine Richtung fliegt,
            tritt er versehentlich auf die Seitenlinie, springt, mufft den Pass
            während er sich in der Luft befindet, landet inbounds auf dem
            Boden, ergreift den Ball und landet inbounds auf seinen Knien,
            wobei er den Ball fest in seinen Händen hält.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                Unvollständiger Vorwärtspass. A44 berührt den Ball erstmalig,
                als er sich in der Luft und damit noch im Aus befindet und sich
                so noch nicht inbounds etabliert hatte. (Regel 2.27.15).
            </p>
        </details>
    </div>
</article>
