src/snapshots/afrotd__parser__tests__interpretation_html_7.3.5_1.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 7.3.5.I
        </p>
    </div>
    <div class="message-body">
        <p>
            Team B berührt einen legalen Vorwärtspass in der Nähe der
            Seitenlinie, während sich der ursprünglich berechtigte A1 im Aus
            befindet. A1 kommt ins Feld zurück und berührt den Pass.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                Legales Spiel. Die Berührung durch Team B berechtigt alle
                Spieler während des verbleibenden Downs, den Vorwärtspass zu
                berühren.
            </p>
        </details>
    </div>
</article>
