src/snapshots/afrotd__parser__tests__interpretation_html_7.3.6_11.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 7.3.6.XI
        </p>
    </div>
    <div class="message-body">
        <p>
            Der in der Luft befindliche Receiver A85 ergreift den Ball. Bei der
            Landung berührt er zuerst den Boden inbounds mit seinem linken Fuß,
            als er im Aus zu Boden fällt. Unmittelbar, nachdem A85 auf den
            Boden prallt, wird der Ball frei.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                Unvollständiger Pass, unabhängig davon, ob der Ball zu Boden
                fällt oder nicht, da der Receiver im Aus ist.
            </p>
        </details>
    </div>
</article>
