src/snapshots/afrotd__parser__tests__interpretation_html_7.3.6_16.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 7.3.6.XVI
        </p>
    </div>
    <div class="message-body">
        <p>
            Defender B21 befindet sich in der Nähe der Seitenlinie in der Luft,
            als er einen legalen Vorwärtspass erreicht und unter Kontrolle hat.
            Er landet mit beiden Füßen inbounds und fällt zu Boden. Als B21 in
            die Luft sprang, befand sich seine linke Ferse im Aus. Im
            Sprungvorgang verließ seine Ferse eher den Boden als die Zehen.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                Unvollständiger Vorwärtspass, da B21 durch die Berührung seiner
                Ferse im Aus als „ein Spieler im Aus“ betrachtet wird. Er
                bleibt so lange ein „im Aus befindlicher Spieler“, bis er den
                Boden inbounds berührt, ohne gleichzeitig im Aus zu sein.
                Befinden sich die Ferse oder die Zehen im Aus, wenn ein Spieler
                beim Sprung mit einer durchgehenden FerseZeh- oder
                Zeh-Ferse-Bewegung vom Boden abhebt, befindet sich der Spieler
                im Aus, solange er sich nicht wieder inbounds etabliert.
            </p>
        </details>
    </div>
</article>
